# Tarea2-DatosII

./: .gitignore  CMakeLists.txt  main.cpp
Factory/: Factory.h  FactoryDulce.cpp  FactoryDulce.h  FactoryMani.cpp  FactoryMani.h  FactorySalada.cpp  FactorySalada.h  MaquinaExpendedoraMain.cpp
Factory/Golosinas/: Almendras.cpp  Bombon.cpp  Botoneta.cpp  Golosina.cpp  Golosina.h  ManiSalado.cpp
Observer/: Classes.h  Periodico.cpp  Suscriptor.cpp
